!!! width fully fixed (overflow:hidden;)

--- a/src/scss/main/components/_body.scss
+++ b/src/scss/main/components/_body.scss
@@ -9,9 +9,10 @@ main {
     margin: 0;
 }
 
-// main {
-// overflow: hidden;
-// }
+// Corrected by Nick
+main {
+    overflow: hidden;
+}
 
 img {
     max-width: 100%;
